<resources>
    <string name="app_name">Spendable</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_settings">Settings</string>
    <string name="title_add">New Expense</string>
    <string name="yearly_label">Yearly</string>
    <string name="monthly_label">Monthly</string>
    <string name="biweekly_stats">Biweekly</string>
    <string name="weekly_stats">Weekly</string>
    <string name="daily_stats">Daily</string>
    <string name="total_budget">Total Budget</string>
    <string name="remaining_budget">Available</string>
    <string name="transaction">Transaction</string>
    <string name="subscription">Subscription</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="title">Title</string>
    <string name="category">Category</string>
    <string name="subcategory">Subcategory</string>
    <string name="amount">Amount</string>
    <string name="notes_optional">Notes (optional)</string>
    <string name="notes">Notes</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="date">Date</string>
    <string name="start_date">Start Date</string>
    <string name="time">Time</string>
    <string name="frequency">Frequency</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="eat_out_label">Eat Out</string>
    <string name="market_label">Market</string>
    <string name="shopping_label">Shopping</string>
    <string name="transports_label">Transports</string>
    <string name="entertainment_label">Fun</string>
    <string name="bills_label">Bills</string>
    <string name="holidays_label">Holidays</string>
    <string name="health_label">Health</string>
    <string name="education_label">Education</string>
    <string name="pet_label">Pet</string>
    <string name="kids_label">Kids</string>
    <string name="other_label">Other</string>
    <string name="save_button">Save</string>
    <string name="edit_button">Edit</string>
    <string name="required_field_error">Mandatory field</string>
    <string name="generic_error">An unexpected error occurred</string>
    <string name="streaming_label">Streaming</string>
    <string name="music_label">Music</string>
    <string name="multi_services_label">Mixed</string>
    <string name="gaming_label">Gaming</string>
    <string name="sports_label">Sports</string>
    <string name="utilities_label">Utilities</string>
    <string name="netflix_label">Netflix</string>
    <string name="hbo_max_label">HBO Max</string>
    <string name="disney_plus_label">Disney Plus</string>
    <string name="apple_tv_label">Apple TV</string>
    <string name="crunchyroll_label">Crunchyroll</string>
    <string name="apple_music_label">Apple Music</string>
    <string name="spotify_label">Spotify</string>
    <string name="amazon_prime_label">Amazon Prime</string>
    <string name="youtube_premium_label">Youtube Premium</string>
    <string name="discord_nitro_label">Discord Nitro</string>
    <string name="rent_label">Rent</string>
    <string name="phone_label">Phone</string>
    <string name="cable_label">Cable</string>
    <string name="dazn_label">DAZN</string>
    <string name="audible_label">Audible</string>
    <string name="in_x_days">In %s days</string>
    <string name="x_days_ago">%s days ago</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="yesterday">Yesterday</string>
    <string name="update">Update</string>
    <string name="language">Language</string>
    <string name="currency">Currency</string>
    <string name="follow_system">Follow system</string>
    <string name="theme">Theme</string>
    <string name="light_theme">Light</string>
    <string name="dark_theme">Dark</string>
    <string name="clear_data">Clear app data</string>
    <string name="data_cleared_message">All app data was cleared successfully</string>
    <string name="clear_data_confirmation_title">Clear app data</string>
    <string name="clear_data_confirmation_message">This action will permanently delete all registered expenses. Are you sure you want to proceed?</string>
    <string name="yes_clear">Yes, clear</string>
    <string name="euro">Euro</string>
    <string name="dollar">Dollar</string>
    <string name="pound">Pound</string>
    <string name="x_of_x">%s of %s</string>
    <string name="x_of_x_vertical">%s\nof\n%s</string>
    <string name="final_balance">Final Balance</string>
    <string name="delete_transaction_confirmation_message">Are you sure you want to delete this transaction?</string>
    <string name="cancel_subscription_confirmation_title">Cancel this subscription?</string>
    <string name="cancel_subscription_confirmation_message">Previous payments will be kept, but from tomorrow onwards no more payments will be registered.</string>
    <string name="delete_subscription_confirmation_message">Are you sure you want to delete this subscription?</string>
    <string name="cancel_subscription">Cancel subscription</string>
    <string name="cancelled_at">Cancelled at %s</string>
    <string name="keep_active">Keep active</string>
    <string name="paid">Paid</string>
    <string name="no_transactions_message">You haven\'t added any transactions this month yet. Click on the button below to add a new expense.</string>
    <string name="daily_reward">Daily Reward</string>
    <string name="x_points">%s Points</string>
    <string name="next_prize">Next:</string>
    <string name="default_username">User</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="profile_image">Profile Image</string>
    <string name="unlocked_avatar">Unlocked</string>
    <string name="current_avatar">Current</string>
    <string name="x_pts">%spts</string>
    <string name="no_prev_months">Nothing registered in previous months. Continue using the app to see your expenses from past months listed in this tab.</string>
</resources>